// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchRecipient should not render if not open 1`] = `<DocumentFragment />`;

exports[`SearchRecipient should not render recipient if not in same network 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 justify-center items-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="Modal__ModalContainer-sc-1pv7yg7-0 NWPmM absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto overflow-hidden rounded-2xl bg-theme-background shadow-2xl "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
      >
        <button
          class="Button__StyledButton-mdtvtf-0 fHYGyx w-11 h-11"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            <div
              class="sc-bdfBwQ bfBhNR"
              height="14"
              width="14"
            >
              <svg>
                cross-slim.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Select Recipient
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text whitespace-pre-line"
          >
            Find and select a recipient from your contacts and wallets
          </div>
          <div
            class="mt-8"
          >
            <div
              class="Table__TableWrapper-sc-84pst5-0 ccYCKK -mt-3"
              role="table"
            >
              <table
                cellpadding="0"
                class="table-auto"
              >
                <thead>
                  <tr
                    class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                    role="row"
                  >
                    <th
                      class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                      colspan="1"
                      data-testid="table__th--0"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top"
                      >
                        <div>
                          Address
                        </div>
                        <div
                          class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                        >
                          <div
                            class="sc-bdfBwQ kJrqvM transition-transform transform rotate-180"
                            height="5"
                            role="img"
                            width="8"
                          >
                            <svg>
                              chevron-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                      colspan="1"
                      data-testid="table__th--1"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top"
                      >
                        <div>
                          Name
                        </div>
                        <div
                          class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                        >
                          <div
                            class="sc-bdfBwQ kJrqvM transition-transform transform rotate-180"
                            height="5"
                            role="img"
                            width="8"
                          >
                            <svg>
                              chevron-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                      colspan="1"
                      data-testid="table__th--2"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top"
                      >
                        <div>
                          Type
                        </div>
                        <div
                          class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                        >
                          <div
                            class="sc-bdfBwQ kJrqvM transition-transform transform rotate-180"
                            height="5"
                            role="img"
                            width="8"
                          >
                            <svg>
                              chevron-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold"
                      colspan="1"
                      data-testid="table__th--3"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top justify-end no-border"
                      >
                        <div>
                          <div
                            class="relative"
                          >
                            <button
                              class="my-auto h-full font-semibold cursor-pointer focus:outline-none"
                              data-testid="header-search-bar__button"
                            >
                              <div
                                class="flex items-center space-x-3"
                              >
                                <span
                                  class="text-theme-primary-300 dark:text-theme-secondary-700"
                                >
                                  Search
                                </span>
                                <div
                                  class="sc-bdfBwQ iNulIV text-theme-primary-300 dark:text-theme-secondary-600"
                                  height="18"
                                  width="18"
                                >
                                  <svg>
                                    search.svg
                                  </svg>
                                </div>
                              </div>
                            </button>
                          </div>
                        </div>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  role="rowgroup"
                />
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchRecipient should not render recipient if not in same network 2`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 justify-center items-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="Modal__ModalContainer-sc-1pv7yg7-0 NWPmM absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto overflow-hidden rounded-2xl bg-theme-background shadow-2xl "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
      >
        <button
          class="Button__StyledButton-mdtvtf-0 fHYGyx w-11 h-11"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            <div
              class="sc-bdfBwQ bfBhNR"
              height="14"
              width="14"
            >
              <svg>
                cross-slim.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Select Recipient
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text whitespace-pre-line"
          >
            Find and select a recipient from your contacts and wallets
          </div>
          <div
            class="mt-8"
          >
            <div
              class="Table__TableWrapper-sc-84pst5-0 ccYCKK -mt-3"
              role="table"
            >
              <table
                cellpadding="0"
                class="table-auto"
              >
                <thead>
                  <tr
                    class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                    role="row"
                  >
                    <th
                      class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                      colspan="1"
                      data-testid="table__th--0"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top"
                      >
                        <div>
                          Address
                        </div>
                        <div
                          class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                        >
                          <div
                            class="sc-bdfBwQ kJrqvM transition-transform transform rotate-180"
                            height="5"
                            role="img"
                            width="8"
                          >
                            <svg>
                              chevron-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                      colspan="1"
                      data-testid="table__th--1"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top"
                      >
                        <div>
                          Name
                        </div>
                        <div
                          class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                        >
                          <div
                            class="sc-bdfBwQ kJrqvM transition-transform transform rotate-180"
                            height="5"
                            role="img"
                            width="8"
                          >
                            <svg>
                              chevron-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                      colspan="1"
                      data-testid="table__th--2"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top"
                      >
                        <div>
                          Type
                        </div>
                        <div
                          class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                        >
                          <div
                            class="sc-bdfBwQ kJrqvM transition-transform transform rotate-180"
                            height="5"
                            role="img"
                            width="8"
                          >
                            <svg>
                              chevron-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold"
                      colspan="1"
                      data-testid="table__th--3"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top justify-end no-border"
                      >
                        <div>
                          <div
                            class="relative"
                          >
                            <button
                              class="my-auto h-full font-semibold cursor-pointer focus:outline-none"
                              data-testid="header-search-bar__button"
                            >
                              <div
                                class="flex items-center space-x-3"
                              >
                                <span
                                  class="text-theme-primary-300 dark:text-theme-secondary-700"
                                >
                                  Search
                                </span>
                                <div
                                  class="sc-bdfBwQ iNulIV text-theme-primary-300 dark:text-theme-secondary-600"
                                  height="18"
                                  width="18"
                                >
                                  <svg>
                                    search.svg
                                  </svg>
                                </div>
                              </div>
                            </button>
                          </div>
                        </div>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  role="rowgroup"
                >
                  <tr
                    class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
                        >
                          <img
                            alt="ARK Wallet 1"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                            title="ARK Wallet 1"
                          />
                          <span
                            class="absolute text-sm font-semibold text-theme-background"
                          >
                            AR
                          </span>
                        </div>
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            D8rr7B1d6T…1VBMs6YUYD
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__name"
                        >
                          ARK Wallet 1
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__type"
                        >
                          My Wallet
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
                      >
                        <button
                          class="Button__StyledButton-mdtvtf-0 iUSBMV"
                          data-testid="RecipientListItem__select-button"
                          type="button"
                        >
                          <div
                            class="flex relative items-center space-x-2"
                          >
                            Select
                          </div>
                        </button>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
                        >
                          <img
                            alt="ARK Wallet 2"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                            title="ARK Wallet 2"
                          />
                          <span
                            class="absolute text-sm font-semibold text-theme-background"
                          >
                            AR
                          </span>
                        </div>
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            D5sRKWckH4…gyC3cvJtwb
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__name"
                        >
                          ARK Wallet 2
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__type"
                        >
                          My Wallet
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
                      >
                        <button
                          class="Button__StyledButton-mdtvtf-0 iUSBMV"
                          data-testid="RecipientListItem__select-button"
                          type="button"
                        >
                          <div
                            class="flex relative items-center space-x-2"
                          >
                            Select
                          </div>
                        </button>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
                        >
                          <img
                            alt="Brian"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                            title="Brian"
                          />
                          <span
                            class="absolute text-sm font-semibold text-theme-background"
                          >
                            BR
                          </span>
                        </div>
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            D61mfSggzb…oHaqJ3Dyib
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__name"
                        >
                          Brian
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__type"
                        >
                          Contact
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
                      >
                        <button
                          class="Button__StyledButton-mdtvtf-0 iUSBMV"
                          data-testid="RecipientListItem__select-button"
                          type="button"
                        >
                          <div
                            class="flex relative items-center space-x-2"
                          >
                            Select
                          </div>
                        </button>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
                        >
                          <img
                            alt="Rok"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"40\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                            title="Rok"
                          />
                          <span
                            class="absolute text-sm font-semibold text-theme-background"
                          >
                            RO
                          </span>
                        </div>
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            DFJ5Z51F1e…h495LZkc6T
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__name"
                        >
                          Rok
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__type"
                        >
                          Contact
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
                      >
                        <button
                          class="Button__StyledButton-mdtvtf-0 iUSBMV"
                          data-testid="RecipientListItem__select-button"
                          type="button"
                        >
                          <div
                            class="flex relative items-center space-x-2"
                          >
                            Select
                          </div>
                        </button>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
                        >
                          <img
                            alt="Rok"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 193, 7)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"50\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"35\\" cx=\\"90\\" cy=\\"60\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"30\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                            title="Rok"
                          />
                          <span
                            class="absolute text-sm font-semibold text-theme-background"
                          >
                            RO
                          </span>
                        </div>
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            D9YiyRYMBS…HofWgJLM7f
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__name"
                        >
                          Rok
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__type"
                        >
                          Contact
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
                      >
                        <button
                          class="Button__StyledButton-mdtvtf-0 iUSBMV"
                          data-testid="RecipientListItem__select-button"
                          type="button"
                        >
                          <div
                            class="flex relative items-center space-x-2"
                          >
                            Select
                          </div>
                        </button>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
                        >
                          <img
                            alt="Rok"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"40\\" cx=\\"20\\" cy=\\"70\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"50\\" cx=\\"0\\" cy=\\"40\\" fill=\\"rgb(255, 152, 0)\\"/></svg>"
                            title="Rok"
                          />
                          <span
                            class="absolute text-sm font-semibold text-theme-background"
                          >
                            RO
                          </span>
                        </div>
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            DKrACQw7yt…dQhZjfXYqu
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__name"
                        >
                          Rok
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__type"
                        >
                          Contact
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
                      >
                        <button
                          class="Button__StyledButton-mdtvtf-0 iUSBMV"
                          data-testid="RecipientListItem__select-button"
                          type="button"
                        >
                          <div
                            class="flex relative items-center space-x-2"
                          >
                            Select
                          </div>
                        </button>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchRecipient should render a modal 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 justify-center items-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="Modal__ModalContainer-sc-1pv7yg7-0 NWPmM absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto overflow-hidden rounded-2xl bg-theme-background shadow-2xl "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
      >
        <button
          class="Button__StyledButton-mdtvtf-0 fHYGyx w-11 h-11"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            <div
              class="sc-bdfBwQ bfBhNR"
              height="14"
              width="14"
            >
              <svg>
                cross-slim.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Select Recipient
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text whitespace-pre-line"
          >
            Find and select a recipient from your contacts and wallets
          </div>
          <div
            class="mt-8"
          >
            <div
              class="Table__TableWrapper-sc-84pst5-0 ccYCKK -mt-3"
              role="table"
            >
              <table
                cellpadding="0"
                class="table-auto"
              >
                <thead>
                  <tr
                    class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                    role="row"
                  >
                    <th
                      class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                      colspan="1"
                      data-testid="table__th--0"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top"
                      >
                        <div>
                          Address
                        </div>
                        <div
                          class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                        >
                          <div
                            class="sc-bdfBwQ kJrqvM transition-transform transform rotate-180"
                            height="5"
                            role="img"
                            width="8"
                          >
                            <svg>
                              chevron-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                      colspan="1"
                      data-testid="table__th--1"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top"
                      >
                        <div>
                          Name
                        </div>
                        <div
                          class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                        >
                          <div
                            class="sc-bdfBwQ kJrqvM transition-transform transform rotate-180"
                            height="5"
                            role="img"
                            width="8"
                          >
                            <svg>
                              chevron-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                      colspan="1"
                      data-testid="table__th--2"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top"
                      >
                        <div>
                          Type
                        </div>
                        <div
                          class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                        >
                          <div
                            class="sc-bdfBwQ kJrqvM transition-transform transform rotate-180"
                            height="5"
                            role="img"
                            width="8"
                          >
                            <svg>
                              chevron-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold"
                      colspan="1"
                      data-testid="table__th--3"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top justify-end no-border"
                      >
                        <div>
                          <div
                            class="relative"
                          >
                            <button
                              class="my-auto h-full font-semibold cursor-pointer focus:outline-none"
                              data-testid="header-search-bar__button"
                            >
                              <div
                                class="flex items-center space-x-3"
                              >
                                <span
                                  class="text-theme-primary-300 dark:text-theme-secondary-700"
                                >
                                  Search
                                </span>
                                <div
                                  class="sc-bdfBwQ iNulIV text-theme-primary-300 dark:text-theme-secondary-600"
                                  height="18"
                                  width="18"
                                >
                                  <svg>
                                    search.svg
                                  </svg>
                                </div>
                              </div>
                            </button>
                          </div>
                        </div>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  role="rowgroup"
                >
                  <tr
                    class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
                        >
                          <img
                            alt="ARK Wallet 1"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                            title="ARK Wallet 1"
                          />
                          <span
                            class="absolute text-sm font-semibold text-theme-background"
                          >
                            AR
                          </span>
                        </div>
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            D8rr7B1d6T…1VBMs6YUYD
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__name"
                        >
                          ARK Wallet 1
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__type"
                        >
                          My Wallet
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
                      >
                        <button
                          class="Button__StyledButton-mdtvtf-0 iUSBMV"
                          data-testid="RecipientListItem__select-button"
                          type="button"
                        >
                          <div
                            class="flex relative items-center space-x-2"
                          >
                            Select
                          </div>
                        </button>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
                        >
                          <img
                            alt="ARK Wallet 2"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                            title="ARK Wallet 2"
                          />
                          <span
                            class="absolute text-sm font-semibold text-theme-background"
                          >
                            AR
                          </span>
                        </div>
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            D5sRKWckH4…gyC3cvJtwb
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__name"
                        >
                          ARK Wallet 2
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__type"
                        >
                          My Wallet
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
                      >
                        <button
                          class="Button__StyledButton-mdtvtf-0 iUSBMV"
                          data-testid="RecipientListItem__select-button"
                          type="button"
                        >
                          <div
                            class="flex relative items-center space-x-2"
                          >
                            Select
                          </div>
                        </button>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
                        >
                          <img
                            alt="Brian"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                            title="Brian"
                          />
                          <span
                            class="absolute text-sm font-semibold text-theme-background"
                          >
                            BR
                          </span>
                        </div>
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            D61mfSggzb…oHaqJ3Dyib
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__name"
                        >
                          Brian
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__type"
                        >
                          Contact
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
                      >
                        <button
                          class="Button__StyledButton-mdtvtf-0 iUSBMV"
                          data-testid="RecipientListItem__select-button"
                          type="button"
                        >
                          <div
                            class="flex relative items-center space-x-2"
                          >
                            Select
                          </div>
                        </button>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
                        >
                          <img
                            alt="Rok"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"40\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                            title="Rok"
                          />
                          <span
                            class="absolute text-sm font-semibold text-theme-background"
                          >
                            RO
                          </span>
                        </div>
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            DFJ5Z51F1e…h495LZkc6T
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__name"
                        >
                          Rok
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__type"
                        >
                          Contact
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
                      >
                        <button
                          class="Button__StyledButton-mdtvtf-0 iUSBMV"
                          data-testid="RecipientListItem__select-button"
                          type="button"
                        >
                          <div
                            class="flex relative items-center space-x-2"
                          >
                            Select
                          </div>
                        </button>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
                        >
                          <img
                            alt="Rok"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 193, 7)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"50\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"35\\" cx=\\"90\\" cy=\\"60\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"30\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                            title="Rok"
                          />
                          <span
                            class="absolute text-sm font-semibold text-theme-background"
                          >
                            RO
                          </span>
                        </div>
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            D9YiyRYMBS…HofWgJLM7f
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__name"
                        >
                          Rok
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__type"
                        >
                          Contact
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
                      >
                        <button
                          class="Button__StyledButton-mdtvtf-0 iUSBMV"
                          data-testid="RecipientListItem__select-button"
                          type="button"
                        >
                          <div
                            class="flex relative items-center space-x-2"
                          >
                            Select
                          </div>
                        </button>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
                        >
                          <img
                            alt="Rok"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"40\\" cx=\\"20\\" cy=\\"70\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"50\\" cx=\\"0\\" cy=\\"40\\" fill=\\"rgb(255, 152, 0)\\"/></svg>"
                            title="Rok"
                          />
                          <span
                            class="absolute text-sm font-semibold text-theme-background"
                          >
                            RO
                          </span>
                        </div>
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            DKrACQw7yt…dQhZjfXYqu
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__name"
                        >
                          Rok
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__type"
                        >
                          Contact
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
                      >
                        <button
                          class="Button__StyledButton-mdtvtf-0 iUSBMV"
                          data-testid="RecipientListItem__select-button"
                          type="button"
                        >
                          <div
                            class="flex relative items-center space-x-2"
                          >
                            Select
                          </div>
                        </button>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchRecipient should render a modal with custom title and description 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 justify-center items-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="Modal__ModalContainer-sc-1pv7yg7-0 NWPmM absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto overflow-hidden rounded-2xl bg-theme-background shadow-2xl "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
      >
        <button
          class="Button__StyledButton-mdtvtf-0 fHYGyx w-11 h-11"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            <div
              class="sc-bdfBwQ bfBhNR"
              height="14"
              width="14"
            >
              <svg>
                cross-slim.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Modal title
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text whitespace-pre-line"
          >
            Modal description
          </div>
          <div
            class="mt-8"
          >
            <div
              class="Table__TableWrapper-sc-84pst5-0 ccYCKK -mt-3"
              role="table"
            >
              <table
                cellpadding="0"
                class="table-auto"
              >
                <thead>
                  <tr
                    class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                    role="row"
                  >
                    <th
                      class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                      colspan="1"
                      data-testid="table__th--0"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top"
                      >
                        <div>
                          Address
                        </div>
                        <div
                          class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                        >
                          <div
                            class="sc-bdfBwQ kJrqvM transition-transform transform rotate-180"
                            height="5"
                            role="img"
                            width="8"
                          >
                            <svg>
                              chevron-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                      colspan="1"
                      data-testid="table__th--1"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top"
                      >
                        <div>
                          Name
                        </div>
                        <div
                          class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                        >
                          <div
                            class="sc-bdfBwQ kJrqvM transition-transform transform rotate-180"
                            height="5"
                            role="img"
                            width="8"
                          >
                            <svg>
                              chevron-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                      colspan="1"
                      data-testid="table__th--2"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top"
                      >
                        <div>
                          Type
                        </div>
                        <div
                          class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                        >
                          <div
                            class="sc-bdfBwQ kJrqvM transition-transform transform rotate-180"
                            height="5"
                            role="img"
                            width="8"
                          >
                            <svg>
                              chevron-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold"
                      colspan="1"
                      data-testid="table__th--3"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top justify-end no-border"
                      >
                        <div>
                          <div
                            class="relative"
                          >
                            <button
                              class="my-auto h-full font-semibold cursor-pointer focus:outline-none"
                              data-testid="header-search-bar__button"
                            >
                              <div
                                class="flex items-center space-x-3"
                              >
                                <span
                                  class="text-theme-primary-300 dark:text-theme-secondary-700"
                                >
                                  Search
                                </span>
                                <div
                                  class="sc-bdfBwQ iNulIV text-theme-primary-300 dark:text-theme-secondary-600"
                                  height="18"
                                  width="18"
                                >
                                  <svg>
                                    search.svg
                                  </svg>
                                </div>
                              </div>
                            </button>
                          </div>
                        </div>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  role="rowgroup"
                >
                  <tr
                    class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
                        >
                          <img
                            alt="ARK Wallet 1"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                            title="ARK Wallet 1"
                          />
                          <span
                            class="absolute text-sm font-semibold text-theme-background"
                          >
                            AR
                          </span>
                        </div>
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            D8rr7B1d6T…1VBMs6YUYD
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__name"
                        >
                          ARK Wallet 1
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__type"
                        >
                          My Wallet
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
                      >
                        <button
                          class="Button__StyledButton-mdtvtf-0 iUSBMV"
                          data-testid="RecipientListItem__select-button"
                          type="button"
                        >
                          <div
                            class="flex relative items-center space-x-2"
                          >
                            Select
                          </div>
                        </button>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
                        >
                          <img
                            alt="ARK Wallet 2"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                            title="ARK Wallet 2"
                          />
                          <span
                            class="absolute text-sm font-semibold text-theme-background"
                          >
                            AR
                          </span>
                        </div>
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            D5sRKWckH4…gyC3cvJtwb
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__name"
                        >
                          ARK Wallet 2
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__type"
                        >
                          My Wallet
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
                      >
                        <button
                          class="Button__StyledButton-mdtvtf-0 iUSBMV"
                          data-testid="RecipientListItem__select-button"
                          type="button"
                        >
                          <div
                            class="flex relative items-center space-x-2"
                          >
                            Select
                          </div>
                        </button>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
                        >
                          <img
                            alt="Brian"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                            title="Brian"
                          />
                          <span
                            class="absolute text-sm font-semibold text-theme-background"
                          >
                            BR
                          </span>
                        </div>
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            D61mfSggzb…oHaqJ3Dyib
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__name"
                        >
                          Brian
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__type"
                        >
                          Contact
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
                      >
                        <button
                          class="Button__StyledButton-mdtvtf-0 iUSBMV"
                          data-testid="RecipientListItem__select-button"
                          type="button"
                        >
                          <div
                            class="flex relative items-center space-x-2"
                          >
                            Select
                          </div>
                        </button>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
                        >
                          <img
                            alt="Rok"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"40\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                            title="Rok"
                          />
                          <span
                            class="absolute text-sm font-semibold text-theme-background"
                          >
                            RO
                          </span>
                        </div>
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            DFJ5Z51F1e…h495LZkc6T
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__name"
                        >
                          Rok
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__type"
                        >
                          Contact
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
                      >
                        <button
                          class="Button__StyledButton-mdtvtf-0 iUSBMV"
                          data-testid="RecipientListItem__select-button"
                          type="button"
                        >
                          <div
                            class="flex relative items-center space-x-2"
                          >
                            Select
                          </div>
                        </button>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
                        >
                          <img
                            alt="Rok"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 193, 7)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"50\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"35\\" cx=\\"90\\" cy=\\"60\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"30\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                            title="Rok"
                          />
                          <span
                            class="absolute text-sm font-semibold text-theme-background"
                          >
                            RO
                          </span>
                        </div>
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            D9YiyRYMBS…HofWgJLM7f
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__name"
                        >
                          Rok
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__type"
                        >
                          Contact
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
                      >
                        <button
                          class="Button__StyledButton-mdtvtf-0 iUSBMV"
                          data-testid="RecipientListItem__select-button"
                          type="button"
                        >
                          <div
                            class="flex relative items-center space-x-2"
                          >
                            Select
                          </div>
                        </button>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
                        >
                          <img
                            alt="Rok"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"40\\" cx=\\"20\\" cy=\\"70\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"50\\" cx=\\"0\\" cy=\\"40\\" fill=\\"rgb(255, 152, 0)\\"/></svg>"
                            title="Rok"
                          />
                          <span
                            class="absolute text-sm font-semibold text-theme-background"
                          >
                            RO
                          </span>
                        </div>
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            DKrACQw7yt…dQhZjfXYqu
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__name"
                        >
                          Rok
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                      >
                        <span
                          data-testid="RecipientListItem__type"
                        >
                          Contact
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
                      >
                        <button
                          class="Button__StyledButton-mdtvtf-0 iUSBMV"
                          data-testid="RecipientListItem__select-button"
                          type="button"
                        >
                          <div
                            class="flex relative items-center space-x-2"
                          >
                            Select
                          </div>
                        </button>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
